# vpn-tool

./: .gitignore  Cargo.toml  LICENSE  README.md
gui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
gui/src/: App.vue
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: builld.rs  lib.rs  main.rs  sidecar_bridge.rs
gui/src-tauri/src/commands/: geo.rs  mod.rs  pinger.rs  state.rs  tunnel.rs  utils.rs  vpn.rs
gui/src-tauri/src/commands/tunnel/: apps.rs  configs.rs  metadata.rs  mod.rs  tunnel.rs
gui/src/assets/: colors-1.test.css  globals.css
gui/src/components/: Map.vue  NewConfigurationModal.vue  NodeSelector.vue  PowerButton.vue  Settings.vue  Toolbar.vue  TunnelSelector.vue
gui/src/lib/: geo.ts  network.ts  tauri.ts  tunnel.ts
sidecar/: Cargo.toml
sidecar/src/: build.rs  main.rs
src/: lib.rs  main.rs  ssh.rs  wireguard.rs
src/wireguard/: peer.rs  server.rs  state.rs
vpn-lib/: Cargo.toml
vpn-lib/src/: lib.rs  main.rs  ssh.rs  utils.rs
vpn-lib/src/app_filter/: mod.rs  scanner.rs  shunt.rs
vpn-lib/src/wireguard/: client.rs  interface.rs  mod.rs  peer.rs  server.rs  state.rs
