[package]
name = "vpn-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
ssh2 = "0.9.5"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[dev-dependencies]
tempfile = "3.25.0"
