[package]
name = "vpn-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssh2 = "0.9.5"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[dev-dependencies]
tempfile = "3.25.0"
