[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
vpn-lib = { path = "../vpn-lib" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_Security"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.183"

[build-dependencies]
winres = "0.1.12"