[package]
name = "vpn-lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "vpn_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
base64 = "0.22"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
etherparse = "0.19.0"
image = "0.25.9"
netdev = "0.40.1"
png = "0.18.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
russh = "0.57.0"
russh-keys = "0.49.2"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssh2 = "0.9.5"
surge-ping = "0.8.4"
sysinfo = "0.38.3"
tauri-plugin-stronghold = "2.3.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
winapi = { version = "0.3.9", features = ["shellapi", "wingdi", "winuser", "windef"] } 
windows = { version = "0.62.2", traits = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[dev-dependencies]
tempfile = "3.25.0"
