[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev.package.scrypt]
opt-level = 3

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
vpn-lib = { path = "../../vpn-lib" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tauri-plugin-dialog = "2"
tokio = "1.49.0"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
surge-ping = "0.8.4"
tokio-util = "0.7.18"
tauri-plugin-stronghold = "2.3.1"
secrecy = "0.10.3"
tauri-plugin-store = "2"
dirs = "6.0.0"
keyring = "3.6.3"
